--- a/package.json
+++ b/package.json
@@ -9,10 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.14.18",
+    "@mui/material": "^5.14.18",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.6",
     "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
+    "cookie-cutter": "^0.2.0",
     "next": "latest",
+    "pusher-js": "^8.3.0",
     "react": "latest",
-    "react-dom": "latest"
+    "react-bootstrap": "^2.9.1",
+    "react-dom": "latest",
+    "react-infinite-scroll-component": "^6.1.0",
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
     "eslint": "latest",
