--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "cookie-cutter": "^0.2.0",
+    "cookies-next": "^4.1.0",
     "next": "latest",
     "pusher-js": "^8.3.0",
     "react": "latest",
